feat: Overhaul UI to a visually interactive skill tree

--- a/index.html
+++ b/index.html
@@ -3,14 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PeerPath</title>
+    <title>PeerPath - Your Skill Tree</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <div class="title-container">
         <h1>PeerPath</h1>
-    </header>
-    <main id="skill-tree-container"></main>
+        <p>Your Personal Skill Tree for Life</p>
+    </div>
+    <div class="skill-tree" id="skill-tree-root">
+        <!-- The skill tree will be dynamically generated here by script.js -->
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
