refactor: Convert skill tree to a vertical layout

--- a/index.html
+++ b/index.html
@@ -8,12 +8,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="title-container">
-        <h1>PeerPath</h1>
-        <p>Your Personal Skill Tree for Life</p>
-    </div>
-    <div class="skill-tree" id="skill-tree-root">
-        <!-- The skill tree will be dynamically generated here by script.js -->
+    <div class="app-container">
+        <div class="skill-tree-container">
+            <div class="title-header">
+                <h1>PeerPath</h1>
+            </div>
+            <ul class="skill-tree" id="skill-tree-root">
+                <!-- Skill tree is dynamically generated here -->
+            </ul>
+        </div>
+        <div class="main-content">
+            <p>Select a skill to begin your journey.</p>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
